--- a/index.html
+++ b/index.html
@@ -7,6 +7,38 @@
     </head>
 
     <body>
-        Xin chào các bạn 
+        <h1> đây là thẻ h1</h1>
+
+        <button>đăng ký</button>
+
+        <div>
+            <p> đây là một đoạn văn bản</p>
+            <img src="https://github.com/ledinhchinh0212/UIT-Problem/blob/main/Logo_UIT_In-218x260.jpg?raw=true" alt="ảnh UIT">
+            <a href="https://github.com/ledinhchinh0212">Tới trang github của tôi</a>
+            <ul>
+                <li>HTML, CSS là gì?</li>
+                <li>Cài đặt môi trường</li>
+            </ul>
+            <table>
+                <thead>
+                    <th>STT</th>
+                    <th>Name</th>
+                    <th>Tuổi</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Lê Đình Chinh</td>
+                        <td>18</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Lê Đình Chinh v2</td>
+                        <td>19</td>
+                    </tr>
+                    
+                </tbody>
+            </table>
+        </div>
     </body>
 </html>
