--- a/index.html
+++ b/index.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <!-- Phần đầu -->
-    <head>
-        <title>Le Dinh Chinh - Shop</title>
-        <meta charset="utf-8">
-    </head>
-
-    <body>
-        <h1> đây là thẻ h1</h1>
-
-        <button>đăng ký</button>
-
-        <div>
-            <p> đây là một đoạn văn bản</p>
-            <img src="https://github.com/ledinhchinh0212/UIT-Problem/blob/main/Logo_UIT_In-218x260.jpg?raw=true" alt="ảnh UIT">
-            <a href="https://github.com/ledinhchinh0212">Tới trang github của tôi</a>
-            <ul>
-                <li>HTML, CSS là gì?</li>
-                <li>Cài đặt môi trường</li>
-            </ul>
-            <table>
-                <thead>
-                    <th>STT</th>
-                    <th>Name</th>
-                    <th>Tuổi</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Lê Đình Chinh</td>
-                        <td>18</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Lê Đình Chinh v2</td>
-                        <td>19</td>
-                    </tr>
-                    
-                </tbody>
-            </table>
-        </div>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <!-- <p>Trang web fullstack.edu.vn thuộc sở hữu bởi F8 - Nền tảng học lập trình web tiên phong tại Việt Nam.</p> -->
+    <h2>Học lập trình web tại F8 có gì đặc biệt?</h2>
+    <ul>
+        <li>Học theo lộ trình rõ ràng, bài bản</li>
+        <li>Ví dụ trực quan, có thực hành sau mỗi bài lý thuyết</li>
+        <li>Nội dung video dễ hiểu</li>
+        <li>Người hướng dẫn tâm huyết</li>
+        <li>Âm thanh, hình ảnh chất lượng cao</li>
+    </ul>
+</body>
 </html>
+<!--
+    Lưu ý: Chức năng nhấn tab hoàn thành thẻ bị vô hiệu hóa,
+    các bạn vui lòng tự gõ để ghi nhớ cú pháp tốt hơn nhé!
+-->
