--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
-    <!-- <p>Trang web fullstack.edu.vn thuộc sở hữu bởi F8 - Nền tảng học lập trình web tiên phong tại Việt Nam.</p> -->
-    <h2>Học lập trình web tại F8 có gì đặc biệt?</h2>
-    <ul>
-        <li>Học theo lộ trình rõ ràng, bài bản</li>
-        <li>Ví dụ trực quan, có thực hành sau mỗi bài lý thuyết</li>
-        <li>Nội dung video dễ hiểu</li>
-        <li>Người hướng dẫn tâm huyết</li>
-        <li>Âm thanh, hình ảnh chất lượng cao</li>
-    </ul>
+    <h1>le dinh chinh</h1>
 </body>
 </html>
-<!--
-    Lưu ý: Chức năng nhấn tab hoàn thành thẻ bị vô hiệu hóa,
-    các bạn vui lòng tự gõ để ghi nhớ cú pháp tốt hơn nhé!
--->
