--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1 {
-            color: red;
-        }
-        p {
-            color: green;
-        }
-    </style>
 </head>
 <body>
-    <h1>Tổng hợp các sản phẩm của học viên tại F8 👏👏</h1>
-    <a href="https://fullstack.edu.vn/blog/tong-hop-cac-san-pham-cua-hoc-vien-tai-f8.html">Xem bài viết gốc</a>
-    <p>Bài viết này nhằm tổng hợp lại các dự án mà học viên F8 đã hoàn thành và chia sẻ trên nhóm Học lập trình web F8. Các dự án dưới đây được mình ngẫu nhiên lựa chọn để đăng chứ không mang tính xếp hạng các bạn nhé.</p>
-    <h2>FOR ALL 👏👏</h2>
-    <p>Là trang web không sử dụng quá nhiều kĩ thuật về cả UI lẫn UX nhưng bù lại có chất lượng content tuyệt vời, được phần lớn anh em cộng đồng mạng yêu thích và bình chọn 🤣🤣</p>
-    <img src="https://files.fullstack.edu.vn/f8-prod/blog_posts/65/6139fe28a9844.png" alt="FOR ALL" width="100%">
+    <div id="app">
+        <h1 id="heading">HTML, CSS từ Zero đến Hero</h1>
+        <p class="desc">Trong khóa này tại <a href="https://fullstack.edu.vn/">F8</a>, chúng ta sẽ cùng nhau xây dựng giao diện 2 trang web là The Band & Shopee.</p>
+    
+        <h2 class="sub-heading">Bạn sẽ học được gì?</h2>
+        <ul class="list">
+            <li class="list-item">Biết cách xây dựng giao diện web với <strong>HTML, CSS</strong></li>
+            <li class="list-item">Biết cách phân tích giao diện website</li>
+            <li class="list-item">Sở hữu <em>2 giao diện web</em> khi học xong khóa học</li>
+        </ul>
+        <p class="copyright">F8 - Nền <a href="https://fullstack.edu.vn/">tảng học lập trình web</a> đầu tiên tại Việt Nam</p>
+    </div>
 </body>
 </html>
